# webapp_clicker

./: .gitignore  pyproject.toml  req.txt  server.py
bot/: __main__.py  jobs.py  scheduler.py
bot/db/: base.py  func.py  models.py
static/css/: base.css  clicker.css  collection.css  responsive.css
static/js/: base.js  bootstrap.js  chest.js  clicker.js  collection.js  leaderboard.js  save.js  upgrades.js
templates/: clicker.html
